# fymil

./: CMakeLists.txt  README.md  main.cpp
fymil/: context.hpp  element_manager.hpp  program.hpp
fymil/elements/: command.hpp  element.hpp  parser.hpp  print.hpp  string.hpp
fymil/types/: boolean.hpp  string.hpp  type.hpp  undefined.hpp
fymil/utilities/: string_conversions.hpp  transcode.hpp
programs/: hello_world.xml  log4cxx.properties
